Thu Jun 30 00:03:20 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* lib/irb/completion.rb: complate correctry string literal. fix
	  [Bug #1145].

Wed Jun 29 23:42:51 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: avoided using timev.
	* ext/date/date_strftime.c: ditto.
	* ext/date/date_tmx.h: ditto.

Wed Jun 29 23:17:57 2011  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/openssl/ossl.h (OPENSSL_SYS_WIN32): support for mingw(msys).

Wed Jun 29 23:09:14 2011  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/tk/extconf.rb (intptr_t, uintptr_t): support for the latest ActiveTcl with mingw.

Wed Jun 29 22:49:10 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* lib/irb/cmd/help.rb: support RDoc 3.7. fix [Bug #3760].

Wed Jun 29 22:04:14 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* lib/tracer.rb: Tracer.on only if required by -r command-line option.
	  and consider --disable-gems option.
	* test/test_tracer.rb: add tests for it.

Wed Jun 29 13:55:36 2011  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* variable.c (rb_const_get_0): should not look for superclasses if
	  the second optional argument is given for #const_get().
	  fix [Bug #3422] [Bug #3423]

Wed Jun 29 12:07:27 2011  Eric Hodel  <drbrain@segment7.net>

	* math.c:  Attach documentation for Math.
	* object.c:  Document NIL, TRUE, FALSE.
	* io.c:  Improve grammar in ARGF comment.  Document STDIN/OUT/ERR.
	  Document ARGF global constant.
	* lib/rake:  Hide deprecated toplevel constants from RDoc (import from
	  rake trunk).
	* lib/thwait.rb:  Document ThWait.
	* lib/mathn.rb:  Hide Math redefinition from RDoc
	* lib/sync.rb:  Add a basic comment for Sync_m, Synchronizer_m, Sync,
	  Synchronizer.
	* parse.y:  Document SCRIPT_LINES__.
	* hash.c:  Document ENV class and global constant.
	* vm.c:  Document TOPLEVEL_BINDING.
	* version.c:  Document RUBY_* constants.
	* ruby.c:  Document DATA and ARGV.

Wed Jun 29 10:13:12 2011  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
